// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: stories > Ant stories > Story Tagged 1`] = `
"<div contenteditable="true">
  <span>We preset five different colors. You can set color property such as </span>
  <span contenteditable="false">success</span>
  <span>, </span>
  <span contenteditable="false">processing</span>
  <span>, </span>
  <span contenteditable="false">error</span>
  <span>, </span>
  <span contenteditable="false">default</span>
  <span> and </span>
  <span contenteditable="false">warning</span>
  <span> to show specific status.</span>
</div>"
`;

exports[`Component: stories > Api stories > Story Block 1`] = `
"<div>
  <div contenteditable="true">
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="false" aria-label="Block options">
          <span></span>
        </button>
      </div>
      <mark data-testid="mark" contenteditable="false">a</mark>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="false" aria-label="Block options">
          <span></span>
        </button>
      </div>
      <mark data-testid="mark" contenteditable="false">b</mark>
    </div>
  </div>
  <div>
    <button type="button" data-testid="insert-at-caret">insert at caret</button>
    <button type="button" data-testid="edit-meta">edit meta</button>
    <button type="button" data-testid="clear-meta">clear meta</button>
    <button type="button" data-testid="remove-mark">remove mark</button>
    <button type="button" data-testid="replace-span">replace span</button>
    <button type="button" data-testid="replace-across">replace across</button>
    <button type="button" data-testid="set-value">set value</button>
    <button type="button" data-testid="clear-value">clear value</button>
    <button type="button" data-testid="insert-between-rows">insert between rows</button>
  </div>
  <output data-testid="value">@[a](x)@[b](y)</output>
</div>"
`;

exports[`Component: stories > Api stories > Story Default 1`] = `
"<div>
  <div contenteditable="true">
    <span>hello </span>
    <mark data-testid="mark" contenteditable="false">world</mark>
    <span> foo</span>
  </div>
  <div>
    <button type="button" data-testid="insert-at-caret">insert at caret</button>
    <button type="button" data-testid="edit-meta">edit meta</button>
    <button type="button" data-testid="clear-meta">clear meta</button>
    <button type="button" data-testid="remove-mark">remove mark</button>
    <button type="button" data-testid="replace-span">replace span</button>
    <button type="button" data-testid="replace-across">replace across</button>
    <button type="button" data-testid="set-value">set value</button>
    <button type="button" data-testid="clear-value">clear value</button>
    <button type="button" data-testid="insert-between-rows">insert between rows</button>
  </div>
  <output data-testid="value">hello @[world](u1) foo</output>
</div>"
`;

exports[`Component: stories > Base stories > Story Autocomplete 1`] = `
"<div contenteditable="true">
  <span>Hello, clickable marked @world!</span>
</div>"
`;

exports[`Component: stories > Base stories > Story Configured 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Enter the '@' for calling </span>
      <button type="button" contenteditable="false">primary</button>
      <span> suggestions and '/' for </span>
      <button type="button" contenteditable="false">default</button>
      <span>!&#10;Mark is can be a any component with any logic. In this example it is the </span>
      <button type="button" contenteditable="false">Button</button>
      <span>: clickable primary or secondary.&#10;For found mark used </span>
      <button type="button" contenteditable="false">annotations</button>
      <span>.</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Enter the '@' for calling @[primary](primary:4) suggestions and '/' for @[default](default:7)!&#10;Mark is can be a any component with any logic. In this example it is the @[Button](primary:54): clickable primary or secondary.&#10;For found mark used @[annotations](default:123).">Enter the '@' for calling @[primary](primary:4) suggestions and '/' for @[default](default:7)!&#10;Mark is can be a any component with any logic. In this example it is the @[Button](primary:54): clickable primary or secondary.&#10;For found mark used @[annotations](default:123).</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>37 words · 271 chars · 3 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Base stories > Story Default 1`] = `
"<div contenteditable="true">
  <span>Hello, clickable marked </span>
  <mark contenteditable="false">world</mark>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story Drag 1`] = `
"<div contenteditable="true">
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>hello&#10;</span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <mark data-testid="mark" contenteditable="false">world</mark>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;foo</span>
  </div>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story Inline 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <mark data-testid="mark" contenteditable="false">world</mark>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story NestedMarkStory 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <mark data-testid="mark" contenteditable="false">
    <strong>wor</strong>
    <em>ld</em>
  </mark>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Clipboard stories > Story PlainText 1`] = `
"<div contenteditable="true">
  <span>abc</span>
</div>"
`;

exports[`Component: stories > Drag stories > Story Markdown 1`] = `
"<div contenteditable="true">
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>Welcome to </span>
        <span>
          <span>
            <span>Marked Input</span>
          </span>
        </span>
        <span></span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>A powerful library for parsing rich text with markdown formatting.&#10;&#10;</span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>Features</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span></span>
        <span>
          <span>
            <span>Bold</span>
          </span>
        </span>
        <span> and </span>
        <span>
          <span>
            <span>italic</span>
          </span>
        </span>
        <span> text support</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span></span>
        <span contenteditable="false">Code snippets</span>
        <span> and </span>
        <span contenteditable="false">code blocks</span>
        <span></span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span></span>
        <span contenteditable="false">Strikethrough</span>
        <span> for deleted content</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>Links like </span>
        <span contenteditable="false">GitHub</span>
        <span></span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>
      <span>
        <span>Example</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span contenteditable="false">const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;</span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;&#10;Visit our docs for more details.</span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story MarkdownDrag 1`] = `
"<div>
  <div contenteditable="true">
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Welcome to Draggable Blocks</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>This is the first paragraph.&#10;&#10;This is the second paragraph.&#10;&#10;</span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Features</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Drag handles appear on hover</span>
        </span>
      </span>
    </div>
  </div>
  <div></div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="# Welcome to Draggable Blocks&#10;&#10;This is the first paragraph.&#10;&#10;This is the second paragraph.&#10;&#10;## Features&#10;&#10;- Drag handles appear on hover&#10;&#10;"># Welcome to Draggable Blocks&#10;&#10;This is the first paragraph.&#10;&#10;This is the second paragraph.&#10;&#10;## Features&#10;&#10;- Drag handles appear on hover&#10;&#10;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>23 words · 137 chars · 11 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story PlainTextDrag 1`] = `
"<div>
  <div contenteditable="true">
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>First block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Second block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Third block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Fourth block of plain text</span>
        </span>
      </span>
    </div>
    <div data-testid="block">
      <div contenteditable="false">
        <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
          <span></span>
        </button>
      </div>
      <span>
        <span>
          <span>Fifth block of plain text</span>
        </span>
      </span>
    </div>
  </div>
  <div></div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="First block of plain text&#10;&#10;Second block of plain text&#10;&#10;Third block of plain text&#10;&#10;Fourth block of plain text&#10;&#10;Fifth block of plain text&#10;&#10;">First block of plain text&#10;&#10;Second block of plain text&#10;&#10;Third block of plain text&#10;&#10;Fourth block of plain text&#10;&#10;Fifth block of plain text&#10;&#10;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>25 words · 137 chars · 11 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story ReadOnlyDrag 1`] = `
"<div contenteditable="false">
  <div data-testid="block">
    <span>
      <span>
        <span>Read-Only Content</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <span>
      <span>
        <span>Section A</span>
      </span>
    </span>
  </div>
  <div data-testid="block">
    <span>
      <span>
        <span>Section B</span>
      </span>
    </span>
  </div>
</div>"
`;

exports[`Component: stories > Drag stories > Story TodoList 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>&#10;</span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <div>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Design Phase</span>
          </span>
        </div>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Create wireframes</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>Define color palette</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Design component library</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <div>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>Research</span>
          </span>
        </div>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>Analyze competitors</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>User interviews</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>Draft interview questions</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>Schedule 5 sessions</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <div>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Development</span>
          </span>
        </div>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Set up CI/CD pipeline</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" checked="" contenteditable="false">
          <span>
            <span>Write unit tests</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>API integration</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Auth endpoints</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Data sync</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <div>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Launch</span>
          </span>
        </div>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Final QA pass</span>
          </span>
        </span>
      </div>
      <div data-testid="block">
        <div contenteditable="false">
          <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
            <span></span>
          </button>
        </div>
        <span>
          <input type="checkbox" contenteditable="false">
          <span>
            <span>Deploy to production</span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="&#10;- [ ] Design Phase&#10;	- [ ] Create wireframes&#10;	- [x] Define color palette&#10;	- [ ] Design component library&#10;- [x] Research&#10;	- [x] Analyze competitors&#10;	- [x] User interviews&#10;	- [x] Draft interview questions&#10;	- [x] Schedule 5 sessions&#10;- [ ] Development&#10;	- [ ] Set up CI/CD pipeline&#10;	- [x] Write unit tests&#10;	- [ ] API integration&#10;	- [ ] Auth endpoints&#10;	- [ ] Data sync&#10;- [ ] Launch&#10;	- [ ] Final QA pass&#10;	- [ ] Deploy to production&#10;">- [ ] Design Phase&#10;	- [ ] Create wireframes&#10;	- [x] Define color palette&#10;	- [ ] Design component library&#10;- [x] Research&#10;	- [x] Analyze competitors&#10;	- [x] User interviews&#10;	- [x] Draft interview questions&#10;	- [x] Schedule 5 sessions&#10;- [ ] Development&#10;	- [ ] Set up CI/CD pipeline&#10;	- [x] Write unit tests&#10;	- [ ] API integration&#10;	- [ ] Auth endpoints&#10;	- [ ] Data sync&#10;- [ ] Launch&#10;	- [ ] Final QA pass&#10;	- [ ] Deploy to production&#10;</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>89 words · 425 chars · 20 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Dynamic 1`] = `
"<div contenteditable="true">
  <span>Hello, dynamical mark </span>
  <mark contenteditable="false">world</mark>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Focusable 1`] = `
"<div>
  <div>
    <div contenteditable="true">
      <span>Hello, </span>
      <abbr title="By key operations" contenteditable="false">focusable</abbr>
      <span> abbreviation </span>
      <abbr title="Hello! Hello!" contenteditable="false">world</abbr>
      <span>!</span>
    </div>
  </div>
  <div>
    <button>Copy</button>
    <div>
      <pre data-value="Hello, @[focusable](By key operations) abbreviation @[world](Hello! Hello!)!">Hello, @[focusable](By key operations) abbreviation @[world](Hello! Hello!)!</pre>
    </div>
    <div>
      <span>Plain text</span>
      <span>7 words · 76 chars · 1 lines</span>
    </div>
  </div>
</div>"
`;

exports[`Component: stories > Dynamic stories > Story Removable 1`] = `
"<div contenteditable="true">
  <span>I </span>
  <mark contenteditable="false">contain</mark>
  <span> </span>
  <mark contenteditable="false">removable</mark>
  <span> by click </span>
  <mark contenteditable="false">marks</mark>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Chipped 1`] = `
"<div contenteditable="true">
  <span>Hello beautiful the </span>
  <div contenteditable="false">
    <span>first</span>
  </div>
  <span> world from the </span>
  <div contenteditable="false">
    <span>second</span>
  </div>
  <span> </span>
</div>"
`;

exports[`Component: stories > Material stories > Story Mentions 1`] = `
"<div contenteditable="true">
  <span>Enter the '@' for calling mention list:&#10;- Hello @Agustina and </span>
  <div contenteditable="false">
    <div>R</div>
    <span>Ruslan</span>
  </div>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Overridden 1`] = `
"<div>
  <div contenteditable="true">
    <span>Hello beautiful the </span>
    <div contenteditable="false">
      <span>first</span>
    </div>
    <span> world from the </span>
    <div contenteditable="false">
      <span>second</span>
    </div>
    <span> </span>
  </div>
</div>"
`;

exports[`Component: stories > Nested stories > Story ComplexHtmlDocument 1`] = `
"<div>
  <button>Preview</button>
  <button>Write</button>
</div>
<div contenteditable="false">
  <span></span>
  <article>
    <span>
      <span>&#10;</span>
      <header>
        <span>
          <span>&#10;</span>
          <h1>
            <span>
              <span>Understanding </span>
              <strong>
                <span>
                  <span>Nested HTML</span>
                </span>
              </strong>
              <span> Structures</span>
            </span>
          </h1>
          <span>&#10;</span>
          <p>
            <span>
              <span></span>
              <small>
                <span>
                  <span>Published on </span>
                  <time>
                    <span>
                      <span>November 13, 2025</span>
                    </span>
                  </time>
                  <span></span>
                </span>
              </small>
              <span></span>
            </span>
          </p>
          <span>&#10;</span>
        </span>
      </header>
      <span>&#10;&#10;</span>
      <section>
        <span>
          <span>&#10;</span>
          <h2>
            <span>
              <span>Introduction</span>
            </span>
          </h2>
          <span>&#10;</span>
          <p>
            <span>
              <span>This is a </span>
              <em>
                <span>
                  <span>comprehensive example</span>
                </span>
              </em>
              <span> of </span>
              <strong>
                <span>
                  <span>nested HTML tags</span>
                </span>
              </strong>
              <span> working together. The </span>
              <code>
                <span>
                  <span>MarkedInput</span>
                </span>
              </code>
              <span> library can parse and render </span>
              <mark>
                <span>
                  <span>complex HTML structures</span>
                </span>
              </mark>
              <span> with multiple levels of nesting.</span>
            </span>
          </p>
          <span>&#10;&#10;</span>
          <blockquote>
            <span>
              <span>&#10;</span>
              <p>
                <span>
                  <span>HTML nesting allows us to create </span>
                  <strong>
                    <span>
                      <span>rich, semantic documents</span>
                    </span>
                  </strong>
                  <span> that are both </span>
                  <em>
                    <span>
                      <span>readable</span>
                    </span>
                  </em>
                  <span> and </span>
                  <u>
                    <span>
                      <span>well-structured</span>
                    </span>
                  </u>
                  <span>.</span>
                </span>
              </p>
              <span>&#10;</span>
            </span>
          </blockquote>
          <span>&#10;</span>
        </span>
      </section>
      <span>&#10;&#10;</span>
      <section>
        <span>
          <span>&#10;</span>
          <h2>
            <span>
              <span>Key Features</span>
            </span>
          </h2>
          <span>&#10;</span>
          <ul>
            <span>
              <span>&#10;</span>
              <li>
                <span>
                  <span></span>
                  <strong>
                    <span>
                      <span>Bold text</span>
                    </span>
                  </strong>
                  <span> using </span>
                  <code>
                    <span>
                      <span>&amp;lt;strong&amp;gt;</span>
                    </span>
                  </code>
                  <span> or </span>
                  <code>
                    <span>
                      <span>&amp;lt;b&amp;gt;</span>
                    </span>
                  </code>
                  <span> tags</span>
                </span>
              </li>
              <span>&#10;</span>
              <li>
                <span>
                  <span></span>
                  <em>
                    <span>
                      <span>Italic text</span>
                    </span>
                  </em>
                  <span> with </span>
                  <code>
                    <span>
                      <span>&amp;lt;em&amp;gt;</span>
                    </span>
                  </code>
                  <span> or </span>
                  <code>
                    <span>
                      <span>&amp;lt;i&amp;gt;</span>
                    </span>
                  </code>
                  <span> tags</span>
                </span>
              </li>
              <span>&#10;</span>
              <li>
                <span>
                  <span></span>
                  <u>
                    <span>
                      <span>Underlined content</span>
                    </span>
                  </u>
                  <span> for emphasis</span>
                </span>
              </li>
              <span>&#10;</span>
              <li>
                <span>
                  <span></span>
                  <mark>
                    <span>
                      <span>Highlighted text</span>
                    </span>
                  </mark>
                  <span> to draw attention</span>
                </span>
              </li>
              <span>&#10;</span>
              <li>
                <span>
                  <span></span>
                  <del>
                    <span>
                      <span>Strikethrough</span>
                    </span>
                  </del>
                  <span> for deleted content</span>
                </span>
              </li>
              <span>&#10;</span>
              <li>
                <span>
                  <span></span>
                  <code>
                    <span>
                      <span>Inline code</span>
                    </span>
                  </code>
                  <span> snippets</span>
                </span>
              </li>
              <span>&#10;</span>
            </span>
          </ul>
          <span>&#10;</span>
        </span>
      </section>
      <span>&#10;&#10;</span>
      <section>
        <span>
          <span>&#10;</span>
          <h2>
            <span>
              <span>Advanced Examples</span>
            </span>
          </h2>
          <span>&#10;</span>
          <h3>
            <span>
              <span>Mathematical Notation</span>
            </span>
          </h3>
          <span>&#10;</span>
          <p>
            <span>
              <span>The formula for water is H</span>
              <sub>
                <span>
                  <span>2</span>
                </span>
              </sub>
              <span>O, and Einstein's famous equation is E=mc</span>
              <sup>
                <span>
                  <span>2</span>
                </span>
              </sup>
              <span>.</span>
            </span>
          </p>
          <span>&#10;&#10;</span>
          <h3>
            <span>
              <span>Code Blocks</span>
            </span>
          </h3>
          <span>&#10;</span>
          <pre>
            <span>
              <span></span>
              <code>
                <span>
                  <span>function parseHTML(input) {&#10;  return parser.parse(input);&#10;}</span>
                </span>
              </code>
              <span></span>
            </span>
          </pre>
          <span>&#10;&#10;</span>
          <h3>
            <span>
              <span>Nested Lists</span>
            </span>
          </h3>
          <span>&#10;</span>
          <ol>
            <span>
              <span>&#10;</span>
              <li>
                <span>
                  <span>First level item&#10;</span>
                  <ul>
                    <span>
                      <span>&#10;</span>
                      <li>
                        <span>
                          <span>Second level </span>
                          <strong>
                            <span>
                              <span>nested</span>
                            </span>
                          </strong>
                          <span> item</span>
                        </span>
                      </li>
                      <span>&#10;</span>
                      <li>
                        <span>
                          <span>Another nested item with </span>
                          <em>
                            <span>
                              <span>emphasis</span>
                            </span>
                          </em>
                          <span></span>
                        </span>
                      </li>
                      <span>&#10;</span>
                    </span>
                  </ul>
                  <span>&#10;</span>
                </span>
              </li>
              <span>&#10;</span>
              <li>
                <span>
                  <span>Another first level item</span>
                </span>
              </li>
              <span>&#10;</span>
            </span>
          </ol>
          <span>&#10;</span>
        </span>
      </section>
      <span>&#10;&#10;</span>
      <section>
        <span>
          <span>&#10;</span>
          <h2>
            <span>
              <span>Complex Nesting</span>
            </span>
          </h2>
          <span>&#10;</span>
          <div>
            <span>
              <span>&#10;</span>
              <p>
                <span>
                  <span>Here's a </span>
                  <strong>
                    <span>
                      <span>complex example</span>
                    </span>
                  </strong>
                  <span> with </span>
                  <em>
                    <span>
                      <span>multiple </span>
                      <u>
                        <span>
                          <span>nested </span>
                          <mark>
                            <span>
                              <span>tags</span>
                            </span>
                          </mark>
                          <span></span>
                        </span>
                      </u>
                      <span> inside</span>
                    </span>
                  </em>
                  <span> each other.</span>
                </span>
              </p>
              <span>&#10;</span>
              <p>
                <span>
                  <span>You can even have </span>
                  <code>
                    <span>
                      <span>code with </span>
                      <strong>
                        <span>
                          <span>bold</span>
                        </span>
                      </strong>
                      <span> inside</span>
                    </span>
                  </code>
                  <span> or </span>
                  <mark>
                    <span>
                      <span>highlighted </span>
                      <em>
                        <span>
                          <span>italic </span>
                          <u>
                            <span>
                              <span>underlined</span>
                            </span>
                          </u>
                          <span></span>
                        </span>
                      </em>
                      <span> text</span>
                    </span>
                  </mark>
                  <span>.</span>
                </span>
              </p>
              <span>&#10;</span>
            </span>
          </div>
          <span>&#10;</span>
        </span>
      </section>
      <span>&#10;&#10;</span>
      <footer>
        <span>
          <span>&#10;</span>
          <p>
            <span>
              <span></span>
              <small>
                <span>
                  <span>© 2025 MarkedInput Library. Built with </span>
                  <strong>
                    <span>
                      <span>React</span>
                    </span>
                  </strong>
                  <span> and </span>
                  <em>
                    <span>
                      <span>TypeScript</span>
                    </span>
                  </em>
                  <span>.</span>
                </span>
              </small>
              <span></span>
            </span>
          </p>
          <span>&#10;</span>
        </span>
      </footer>
      <span>&#10;</span>
    </span>
  </article>
  <span></span>
</div>"
`;

exports[`Component: stories > Nested stories > Story ComplexMarkdown 1`] = `
"<div>
  <button>Preview</button>
  <button>Write</button>
</div>
<div contenteditable="false">
  <span></span>
  <span>
    <span>
      <span>Welcome to </span>
      <span>
        <span>
          <span>Marked Input</span>
        </span>
      </span>
      <span></span>
    </span>
  </span>
  <span>This is a </span>
  <span>
    <span>
      <span>powerful</span>
    </span>
  </span>
  <span> library for parsing </span>
  <span>
    <span>
      <span>rich text</span>
    </span>
  </span>
  <span> with </span>
  <span>
    <span>
      <span>markdown</span>
    </span>
  </span>
  <span> formatting.&#10;You can use </span>
  <span contenteditable="false">inline code</span>
  <span> snippets like </span>
  <span contenteditable="false">const parser = new ParserV2()</span>
  <span> in your text.&#10;&#10;</span>
  <span>
    <span>
      <span>Features</span>
    </span>
  </span>
  <span>- </span>
  <span>
    <span>
      <span>Bold text</span>
    </span>
  </span>
  <span> with </span>
  <span>
    <span>
      <span>strong emphasis</span>
    </span>
  </span>
  <span>&#10;- </span>
  <span>
    <span>
      <span>Italic text</span>
    </span>
  </span>
  <span> and </span>
  <span>
    <span>
      <span>emphasis</span>
    </span>
  </span>
  <span> support&#10;</span>
  <span>
    <span>
      <span></span>
      <span contenteditable="false">Code snippets</span>
      <span> and </span>
      <span contenteditable="false">code blocks</span>
      <span>&#10;</span>
      <span>
        <span>
          <span></span>
          <span contenteditable="false">Strikethrough</span>
          <span> for deleted content&#10;</span>
          <span>
            <span>
              <span>Links like </span>
              <span contenteditable="false">GitHub</span>
              <span></span>
            </span>
          </span>
          <span></span>
          <span>
            <span>
              <span>Example</span>
            </span>
          </span>
          <span>Here's how to use it:</span>
        </span>
      </span>
      <span></span>
      <span contenteditable="false">const parser = new ParserV2(['**__value__**', '*__value__*'])&#10;const result = parser.parse('Hello **world**!')&#10;</span>
      <span></span>
    </span>
  </span>
  <span>Visit our </span>
  <span contenteditable="false">documentation</span>
  <span> for more details.&#10;</span>
  <span contenteditable="false">This feature is deprecated</span>
  <span> and will be removed in v3.0.</span>
</div>"
`;

exports[`Component: stories > Nested stories > Story HtmlLikeTags 1`] = `
"<div contenteditable="true">
  <span></span>
  <div>
    <span>
      <span>This is a div with </span>
      <mark>
        <span>
          <span>a mark inside</span>
        </span>
      </mark>
      <span> and </span>
      <b>
        <span>
          <span>bold text with </span>
          <del>
            <span>
              <span>nested del</span>
            </span>
          </del>
          <span></span>
        </span>
      </b>
      <span></span>
    </span>
  </div>
  <span></span>
</div>"
`;

exports[`Component: stories > Nested stories > Story InteractiveNested 1`] = `
"<div contenteditable="true">
  <span></span>
  <span role="button" title="Depth: 0, Nested: true">
    <span>
      <span>Click me </span>
      <span role="button" title="Depth: 1, Nested: true">
        <span>
          <span>or me </span>
          <span role="button" title="Depth: 2, Nested: false">
            <span>
              <span>or even me</span>
            </span>
          </span>
          <span></span>
        </span>
      </span>
      <span></span>
    </span>
  </span>
  <span></span>
</div>"
`;

exports[`Component: stories > Nested stories > Story MultipleLevels 1`] = `
"<div contenteditable="true">
  <span>Check </span>
  <span>
    <span>
      <span>this tag with </span>
      <span>
        <span>
          <span>nested mention with </span>
          <span>
            <span>
              <span>code</span>
            </span>
          </span>
          <span></span>
        </span>
      </span>
      <span></span>
    </span>
  </span>
  <span> and </span>
  <span>
    <span>
      <span>another </span>
      <span>
        <span>
          <span>deeply nested</span>
        </span>
      </span>
      <span> tag</span>
    </span>
  </span>
  <span></span>
</div>"
`;

exports[`Component: stories > Nested stories > Story SimpleNesting 1`] = `
"<div contenteditable="true">
  <span>This is </span>
  <span>
    <span>
      <span>italic text with </span>
      <span>
        <span>
          <span>bold</span>
        </span>
      </span>
      <span> inside</span>
    </span>
  </span>
  <span> and more text.</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story CustomOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, custom overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story CustomTrigger 1`] = `
"<div contenteditable="true">
  <span>Hello, custom overlay by trigger /!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story DefaultOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, default - suggestion overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story PositionedOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, positioned overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Overlay stories > Story SelectableOverlay 1`] = `
"<div contenteditable="true">
  <span>Hello, suggest overlay by trigger @!</span>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story Overridden 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <div data-size="md" contenteditable="false">
    <span>tag</span>
  </div>
  <span>. Then press the </span>
  <div data-size="md" contenteditable="false">
    <span>Enter</span>
  </div>
  <span> to finish. For example: @hello</span>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story TaggedInput 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <div data-size="md" contenteditable="false">
    <span>tag</span>
  </div>
  <span>. Then press the </span>
  <div data-size="md" contenteditable="false">
    <span>Enter</span>
  </div>
  <span> to finish. For example: @hello</span>
</div>"
`;

exports[`Component: stories > Selection stories > Story Drag 1`] = `
"<div contenteditable="true">
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>hello&#10;</span>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <mark data-testid="mark" contenteditable="false">world</mark>
  </div>
  <div data-testid="block">
    <div contenteditable="false">
      <button type="button" draggable="true" aria-label="Drag to reorder or click for options">
        <span></span>
      </button>
    </div>
    <span>&#10;foo</span>
  </div>
</div>"
`;

exports[`Component: stories > Selection stories > Story Inline 1`] = `
"<div contenteditable="true">
  <span>hello </span>
  <mark data-testid="mark" contenteditable="false">world</mark>
  <span> foo</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story CustomComponents 1`] = `
"<div contenteditable="true">
  <span>Both @[container] and @[span] are @[customized]</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story DataAttributes 1`] = `
"<div data-test-id="marked-input-demo" data-module="slots-api" data-user-id="user-123" contenteditable="true">
  <span>Use @[data] attributes for testing and tracking</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story StyleMerging 1`] = `
"<div contenteditable="true">
  <span>Container has @[merged] styles from multiple sources</span>
</div>"
`;

exports[`Component: stories > Slots stories > Story WithSlotProps 1`] = `
"<h3>Styling &amp; Events via slotProps</h3>
<p>Customize styling and add custom event handlers without replacing components:</p>
<div contenteditable="true">
  <span>Try pressing @[Enter] or clicking</span>
</div>
<div>
  <strong>Recent events:</strong>
  <p>No events yet</p>
</div>"
`;
